don't use the base URI

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "canvassing-import",
   "version": "0.1.0",
   "private": true,
+  "homepage": "/whorepme",
   "dependencies": {
     "jwt-decode": "^2.2.0",
     "react": "^16.2.0",
