--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react-dom": "^16.2.0",
     "react-native-storage-wrapper": "^0.1.0",
     "react-native-web": "^0.5.2",
+    "react-onenterkeydown": "^1.3.0",
     "react-places-autocomplete": "^6.1.3",
     "react-scripts": "1.1.1"
   },
