--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "jwt-decode": "^2.2.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-fontawesome": "^1.6.1",
     "react-native-storage-wrapper": "^0.1.0",
     "react-native-web": "^0.5.2",
     "react-onenterkeydown": "^1.3.0",
